fix partial visibility of hover background in non-hover states on footer links

--- a/themes/gfsc/assets/sass/base/_footer.sass
+++ b/themes/gfsc/assets/sass/base/_footer.sass
@@ -64,7 +64,7 @@
     +border(0 0 2px 2px)
     padding: 0.75rem 0
     line-height: 0
-    background-size: 200% 100%
+    background-size: 210% 100%
     background-image: linear-gradient(to right, transparent 50%, $primary 50%)
     -webkit-transition: 0.2s
     -moz-transition: 0.2s
@@ -79,7 +79,7 @@
         +border(none)
     &:hover
       color: $secondary
-      background-position: -100% 0
+      background-position: -95% 0
 
     a
       display: grid
